# RicherEvals

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conclusions.md  proposal.md  pyproject.toml  requirements.txt  results.md  spar_trial_richer_evals_plan.md
configs/: base.yaml  discovery.yaml  discovery_batch.yaml  estimation.yaml  q_screening.yaml
data/: promptbank_v0.jsonl
scripts/: audit_detectors.py  cluster_outputs.py  estimate_is.py  estimate_is_mixture.py  manual_audit.py  q_screening.py  run_discovery.py  run_discovery_batch.py  run_estimation.py  run_estimation_mixture.py  smoke_paired.py
src/richerevals/: __init__.py  clustering.py  config.py  detectors.py  judge.py  modeling.py  paired_decoding.py  promptbank.py  prompting.py  q_builders.py  run_logger.py  seed.py
